Create/Delete land fixed, Token life edited
